--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wine3</title>
+  <title>Wines: <%= controller.action_name %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
-<body>
+<body style="background: lightblue;">
+
+<p style="color: green"><%= notice %></p>
 
 <%= yield %>
 
