--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -32,10 +32,10 @@
   <%=h @wine.item_no %>
 </p>
 
-<!--<p>-->
-  <!--<b>Tags:</b>-->
-  <!--%=h format_tags @wine.tags %>-->
-<!--</p>-->
+<p>
+  <b>Tags:</b>
+  <%=h format_tags @wine.tags %>
+</p>
 
 
 <%= link_to 'Edit', edit_wine_path(@wine) %> |
