added migration, model, seeds, fixtures, unit_tests, controller, show view, routes(nested for users' reviews) for User
backpaddled and added reviewer_id to reviews table in migration script

added associations between Review and User(Reviewer).

added associations between Wine and User(Reviewer) through Reviews.

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,13 +2,13 @@
 
 <table>
   <tr>
-    <!--<th>Reviewer</th>-->
+    <th>Reviewer</th>
     <th>Review</th>
   </tr>
 
   <% for review in @reviews %>
     <tr>
-      <!--<td>%=h review.reviewer.name if review.reviewer %></td>-->
+      <td><%=h review.reviewer.name if review.reviewer %></td>
       <td><%=h review.body %></td>
       <td><%= link_to 'Show', wine_review_path(@wine, review) %></td>
       <td><%= link_to 'Edit', edit_wine_review_path(@wine, review) %></td>
