--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,9 +1,9 @@
 <h1>Review on <%= @wine.name %></h1>
 
-<!--<p>-->
-  <!--<b>Reviewer:</b>-->
-  <!--%=h @review.reviewer.name if @review.reviewer %>-->
-<!--</p>-->
+<p>
+  <b>Reviewer:</b>
+  <%=h @review.reviewer.name if @review.reviewer %>
+</p>
 
 <p>
   <b>Review:</b>
