added active to Wines, Reviews and Users.
enabled toggling of User's active/inactive state from browser.

added update callback to inactive user's reviews after user is inactivated.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,15 +13,15 @@
   <%=h @user.email %>
 </p>
 
-<!--<p>-->
-  <!--<b>Active:</b>-->
-  <!--%=h @user.active %>-->
-<!--</p>-->
+<p>
+  <b>Active:</b>
+  <%=h @user.active %>
+</p>
 
 <p>
   <b>Reviews</b>
   <%=h @reviews_text %>
 </p>
 
-<!-- %= link_to '>> Toggle Active/Inactive', activate_user_path %> |  -->
+<%= link_to '>> Toggle Active/Inactive', activate_user_path %> |
 <%= link_to '>> Wines', wines_path %>
