--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -40,7 +40,6 @@
 
 <%= link_to 'Edit', edit_wine_path(@wine) %> |
 <%= link_to 'All Reviews', wine_reviews_path(@wine) %> |
-<!-- %= link_to 'Active Reviews', wine_reviews_path(@wine, :active_only_reviews => true) %> |
--->
+<%= link_to 'Active Reviews', wine_reviews_path(@wine, :active_only_reviews => true) %> |
 
 <%= link_to '>> Wines', wines_path %>
