made routes, controllers and views support inheritance hierarchy.  too much empty boilerplate stuff.  maybe rails prefers polymorphic associations instead.
added index page for Users/Buyers/Sellers.

cleaned up before_filter for reviews controller.

added links to Users and Ajax Page on home page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcomed to the Wines site!</h1>
 
-<%= link_to "Wines", wines_path %>
+<%= link_to "Wines", wines_path %>  |
+<%= link_to "Users", users_path %>  |
+<%= link_to "Ajax page", ajax_page_path %>
