--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,7 @@
     <td><%=h user.name %></td>
     <td><%=h user.email %></td>
     <td><%=h user.active %></td>
-    <td><%= link_to 'Show', eval("#{user.type.underscore}_path(user)") %></td>
+    <td><%= link_to 'Show', user %></td>
   </tr>
 <% end %>
 </table>
