made Toggle Active/Inactive label more user friendly.
ajax enabled toggling of user's state on user's index page.

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -28,5 +28,5 @@
   <%=h @reviews_text %>
 </p>
 
-<%= link_to '>> Toggle Active/Inactive', activate_user_path %> |
+<%= link_to toggle_label(@user), activate_user_path %>  |
 <%= link_to '>> Users', users_path %>
