--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
     <td><%=h user.email %></td>
     <td class="active"><%=h user.active %></td>
     <td><%= link_to 'Show', user %></td>
-    <td><%= link_to toggle_label(user), "#", :onclick=>"users.toggle_active(this);" %></td>
+    <td><%= link_to toggle_label(user), "#", :class => "toggle" %></td>
   </tr>
 <% end %>
 </table>
