added link on index and ajax pages to navigate back to home page.

--- a/app/views/why_nots/ajax/ajax_page.html.erb
+++ b/app/views/why_nots/ajax/ajax_page.html.erb
@@ -3,6 +3,9 @@
 <p><a id="post_wine" href="#">Post Wine with id:</a>&nbsp;&nbsp;&nbsp;<input id="post_wine_id" type="text"/></p>
 
 <br/>
+<%= link_to '>> Home', root_path %>
+
+<br/>
 <br/>
 <br/>
 <p>Ajax response:</p>
