--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -33,4 +33,5 @@
 
 <br />
 
-<%= link_to 'New wine', new_wine_path %>
+<%= link_to 'New wine', new_wine_path %>  |
+<%= link_to '>> Home', root_path %>
