--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,13 @@
 <html>
 <head>
   <title>Wine app: <%= controller_name + "->" + controller.action_name %></title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
-<body style="background: lightblue;">
+<body>
 
-<p style="color: green"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 
 <%= yield %>
 
