--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Wine app: <%= controller_name + "->" + controller.action_name %></title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "http://code.jquery.com/jquery-1.6.2.min.js" %>
   <%= javascript_include_tag "users" %>
   <%= csrf_meta_tag %>
 </head>
-<body style="background: lightblue;">
+<body>
 
-<p style="color: green"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 
 <%= yield %>
 
