--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -1,3 +1,5 @@
+$notice-color: green;
+
 body {
     background-color: lightblue;
     h1 {
@@ -13,7 +15,6 @@ body {
             background-color: lightgray;
         }
     }
-    p#notice {
-        color: green;
-    }
+
+    p#notice { color:$notice-color;}
 }
