upgraded from rails 3.0 to 3.1.
upgraded mysql2 from 0.2 to 0.3 to be compatible with rails 3.1

updated syntax for models' valiations per 3.1

removed should_<association> assertions in unit tests as they are no longer supported in 3.1
changed ActiveSupport::TestCase's assertions per 3.1

moved scss to 3.1's asset pipeline default location.  manually watching them change by running "sass --watch" from command line.
disabled asset pipeline for now so js can remain in public/javascripts.

3.1 made json support simpler

made spec_helper point to test/fixtures instead of rspec's default spec/fixtures

--- a/app/views/layouts/alternative.html.erb
+++ b/app/views/layouts/alternative.html.erb
@@ -10,7 +10,7 @@
 </head>
 <body style="background: #ffffe0;">
 
-<p style="color: green"><%= notice %></p>
+<p style="color: blue"><%= notice %></p>
 
 <%= yield %>
 
