--- a/app/views/layouts/why_nots/ajax.html.erb
+++ b/app/views/layouts/why_nots/ajax.html.erb
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Wines: <%= controller.action_name %></title>
-  <%= javascript_include_tag "http://code.jquery.com/jquery-1.6.2.min.js" %>
+  <%= javascript_include_tag "libs/jquery.min" %>
   <%= javascript_include_tag "why_nots" %>
 </head>
 <body style="background: #f08080;">
