converted rest of wine views to haml

--- a/app/assets/stylesheets/wine.scss
+++ b/app/assets/stylesheets/wine.scss
@@ -1,8 +1,14 @@
 @import "default";
 
 body {
-    background: #eee;
-    p#notice {
-        @include notice;
+  background: #eee;
+  p#notice {
+      @include notice;
+  }
+
+  #wines {
+    th {
+      text-align: left;
     }
+  }
 }
