--- a/app/views/layouts/wines.haml
+++ b/app/views/layouts/wines.haml
@@ -3,7 +3,7 @@
   %head
     %title= yield :head_title
     = stylesheet_link_tag "wine"
-    = javascript_include_tag "libs/jquery-min"
+    = javascript_include_tag "libs/jquery.min"
     = javascript_include_tag "application"
 
   - unless @page_caching  &&  Rails.application.config.action_controller.perform_caching
